k8s-cluster/manifests/14-cicd/argo-rollouts-install.yaml
---
# Argo Rollouts Installation
# This manifest installs the Argo Rollouts controller for progressive delivery
#
# Installation:
# kubectl create namespace argo-rollouts
# kubectl apply -n argo-rollouts -f argo-rollouts-install.yaml
# kubectl apply -n argo-rollouts -f https://github.com/argoproj/argo-rollouts/releases/latest/download/install.yaml
#
# Install Argo Rollouts kubectl plugin:
# curl -LO https://github.com/argoproj/argo-rollouts/releases/latest/download/kubectl-argo-rollouts-linux-amd64
# chmod +x ./kubectl-argo-rollouts-linux-amd64
# sudo mv ./kubectl-argo-rollouts-linux-amd64 /usr/local/bin/kubectl-argo-rollouts

apiVersion: v1
kind: Namespace
metadata:
  name: argo-rollouts
  labels:
    name: argo-rollouts
    app.kubernetes.io/part-of: argo-rollouts

---
# Argo Rollouts Dashboard Service
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
  labels:
    app.kubernetes.io/name: argo-rollouts-dashboard
    app.kubernetes.io/part-of: argo-rollouts
spec:
  type: ClusterIP
  ports:
  - port: 3100
    targetPort: 3100
    protocol: TCP
    name: dashboard
  selector:
    app.kubernetes.io/name: argo-rollouts

---
# Service for Argo Rollouts metrics
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-metrics
  namespace: argo-rollouts
  labels:
    app.kubernetes.io/name: argo-rollouts-metrics
    app.kubernetes.io/part-of: argo-rollouts
spec:
  type: ClusterIP
  ports:
  - port: 8090
    targetPort: 8090
    protocol: TCP
    name: metrics
  selector:
    app.kubernetes.io/name: argo-rollouts
